Rewrote VDF parser Data viewer now can only preview records/maps/lists